--- a/client/src/components/card/card.css
+++ b/client/src/components/card/card.css
@@ -1,7 +1,7 @@
 .card-container{
     display: flex;
     flex-direction: column;
-    background-color: aquamarine;
+    background-color: #A0CED9;
     border: 1px solid grey;
     border-radius: 5px;
     padding: 25px;
