--- a/client/src/views/create/create.css
+++ b/client/src/views/create/create.css
@@ -1,13 +1,4 @@
-.searchbar{
-    line-height: 40px;
-    margin-bottom: 30px;
-}
-
-.button{
-    margin: 10px;
-}
-
-.input{
+input{
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.6em 1.2em;
@@ -17,4 +8,22 @@
     background-color: #1a1a1a;
     cursor: pointer;
     transition: border-color 0.25s;
+    margin-top: 10px;
   }
+
+.season{
+    display: flex;
+    justify-content: center;
+}
+
+.checkbox{
+    padding: 0px 10px;
+}
+
+.camp{
+    padding-bottom: 10px;
+}
+
+select{
+    margin-top: 10px;
+}
