--- a/client/src/views/home/home.css
+++ b/client/src/views/home/home.css
@@ -1,20 +1,74 @@
-#root {
-    max-width: 1500px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
-  }
+body{
+  max-width: 1500px;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
 
-  .home-title {
-    margin-top: 0px;
-    margin-bottom: 30px;
-    font-size: 70px;
-  }
 
-  .home{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+.home-title {
+  margin-top: 0px;
+  margin-bottom: 30px;
+  font-size: 70px;
+}
 
-  
+.sup{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5px;
+}
+
+.nav{
+  display: flex;
+  margin-top: 10px;
+}
+
+.filter {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 30px;
+  margin-top: 15px;
+}
+
+.buttons{
+  display: flex;
+  justify-content: space-between;
+  margin: 20px;
+}
+
+select{
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+select:hover {
+  border-color: white;
+}
+
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
