--- a/client/src/views/landing/landing.css
+++ b/client/src/views/landing/landing.css
@@ -1,12 +1,17 @@
-body{
-    /* background-image: url(background.jpg) ; */
+#BG{
+    background-image: url(background.jpg) ;
     background-size: cover;
     background-position: center;
     padding: 0px;
     margin: 0px;
-    height: 100%;
-    width: 100%;
+    height: 670px;
+    width: 1406px;
 }
+#button{
+  margin-top: 120px;
+  margin-right: 200px;
+}
+
 button {
     border-radius: 8px;
     border: 1px solid transparent;
