--- a/client/src/components/cards/cards.css
+++ b/client/src/components/cards/cards.css
@@ -5,3 +5,8 @@
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
 }
+
+body{
+    display: flex;
+    justify-content: center;
+}
