--- a/client/src/views/create/create.css
+++ b/client/src/views/create/create.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: flex-start;
     height: auto;
-    width: 1406px;
+    width: 1500px;
+    margin-top: 15px;
 }
 
 input{
