--- a/client/src/components/cards/cards.css
+++ b/client/src/components/cards/cards.css
@@ -9,3 +9,12 @@ body{
     display: flex;
     justify-content: center;
 }
+
+.cp{
+    background-color: #A0CED9;
+    color: black;
+    width: 80px;
+    padding: 5px 10px;
+    margin: 10px 0px 10px 690px;
+    border: none;
+    border-radius: 10px;}
