falta que el select quede grabado al navegar entre las views

--- a/client/src/components/pagination/pagination.css
+++ b/client/src/components/pagination/pagination.css
@@ -40,3 +40,8 @@
     color: white;
     font-weight: bold;
 }
+.paginationButton.disabled {
+    cursor: not-allowed;
+    background-color: #ddd; /* Puedes cambiar este color a tu preferencia para indicar que está desactivado */
+    color: #666; /* Puedes cambiar este color a tu preferencia para indicar que está desactivado */
+  }
